<resources>
    <string name="app_name">Tuxedo</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">IMk3fgM2AXuMVNVQFWgVwAWJb</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">OfR0AcJdTOhPxzcR6Z8Zf66sOrrMFdKYtSr5vJVoIR1foR4aKk</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorites</string>

    <!-- Preferences Strings -->
    <string-array name="genderArray">
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
        <item>Non-Binary</item>
        <item>Gender-Fluid</item>
    </string-array>

    <string-array name="orientationArray">
        <item>Heterosexual</item>
        <item>Gay</item>
        <item>Lesbian</item>
        <item>Bisexual</item>
        <item>Queer</item>
    </string-array>

    <string-array name="religionArray">
        <item>Agnostic</item>
        <item>Atheism</item>
        <item>Buddhism</item>
        <item>Christianity</item>
        <item>Hindu</item>
        <item>Judaism</item>
        <item>Islam</item>
        <item>Pagan</item>
    </string-array>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sign_up">Sign-Up</string>
    <string name="age">Age</string>
    <string name="religion">Religion</string>
    <string name="political_views">Political Views</string>
    <string name="gender">Gender</string>
    <string name="orientation">Orientation</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <!-- Preferences Strings -->

</resources>
